--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -126,3 +126,23 @@ hr {
 	
 	
 }
+
+table{
+	margin: 50px auto;
+	border-collapse: separate;
+	
+}
+
+.rightColumn {
+	text-align: left;
+}
+
+.leftColumn {
+	text-align: right;
+	font-weight: bold;
+}
+
+.clientLogos {
+	width: 250px;
+	margin: auto 20px 20px 20px;
+}
