--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -4,145 +4,121 @@ body {
 	font-family: 'Arimo', sans-serif;
 }
 .topContainer {
-	margin: 0px;
-	background-image: linear-gradient(rgba(187, 225, 250, 0.5), rgba(187, 225, 250, 0.5)), url(http://www.financecapitalmarkets.com/wp-content/uploads/2018/10/Experience-Rising-Business-With-Central-Coast-Accountants.jpg);
-	background-position: 50% 50%;
-	background-size: cover;
-	background-repeat: no-repeat;
-	line-height: 2;
-	height: 700px;
+	margin: 0;
+	background-color: #142850;
+	padding: 10% 20% 10% 20%;
 }
-h1 {
-/*	margin: 0px;*/
-	text-align: center;
-	font-size: 4rem;
-	font-family: 'Gochi Hand', cursive;
-	color: #1b262c;
-	padding-top: 5%;
+.personName {
+	font-weight: bold;
+	padding: 25px 0;
+	text-align: left;
+	color: white;
+	margin-top: auto;
+	margin-bottom: auto;
 }
-h3 {
-	font-family: 'Bangers', cursive;
-	font-size: 1.5rem;
-	color: #1b262c;
-	font-weight: normal;
-/*	text-align: center;*/
-/*	margin: 0px;*/
-}
-h2 {
-	font-family: 'Bangers', cursive;
-	font-size: 3rem;
-	color: #1b262c;
-	font-weight: normal;
-	text-align: center;
-}
-.bottom-cloud {
-	position: absolute;
-	left: 300px;
-}
-.top-cloud {
-	position: relative;
-	left: 200px;
-	margin-top: 50px;
-}
+
+/**********************Profile Picure and container "PIC"**********************/
+
 .profilePic {
 	width: 250px;
 	border-radius: 100%;
-	margin-bottom: 50px;
-	align-self: center;
-	
-	
 }
-a {
-	color: #11999E;
+.pic {
+	text-align: right;
 }
-.subtitle {
-	font-weight: normal;
+
+/******************************personal summary******************************/
+
+.profile {
+	padding: 5% 0;
 }
-.skill-row {
-	width: 70%;
-	margin: 100px auto;
-	text-align:justify;
-	line-height: 1.5;
-}
-.skill-img {
-	width: 25%;
-	float: left;
-	margin-right: 30px;
-}
-.skill-img2 {
-	width: 25%;
-	float: left;
-	margin-left: 30px;
+.profile h2 {
+	font-weight: bold;
 }
 .personal-paragraph {
 	margin: auto;
-	width: 70%;
 	line-height: 2;
-	padding: 50px 0 50px 0;
+	padding: 10px 15% 0 15%;
 	text-align: justify;
 }
-.middle-container {
-	margin: 0px;
-	padding-top: 100px;
-	padding-bottom: 100px;
-	background-color: #e1f2fb;
-}
 
-.topBar {
-	height: 5rem;
-	background-color: #1b262c;
-	text-align: left;
-	
-}
+/************************ Work Experience ******************************/
 
-h4 {
+.skills {
+	background-color: #27496d;
 	color: white;
-	font-size: 1.5rem;
-	font-weight: normal;
-	font-family: 'Gochi Hand', cursive;
-	display: inline-block;
-	border: solid 2px white;
-	padding:5px;
-	margin: 1rem 0.5rem;
+	padding: 5% 0;
 	
 }
+.fa-graduation-cap,
+.fa-user-tie {
+	font-size: 7rem;
+}
+.skill-row {
+	width: 70%;
+	margin: 50px auto;
+	text-align: justify;
+	line-height: 1.5;
+}
+
+/************************ Major Clients ******************************/
+.majorClients {
+	margin: 50px 0;
+	padding: 0 20%;
+	height: 300px;
+}
+
+.majorClients h5{
+	font-size: 1.5rem;
+	font-weight: bold;
+	padding: 20px;
+	color: #27496d;
+}
+.majorClients h2{
+	font-weight: bold;
+	padding-bottom: 30px;
+}
+.carousel-item img {
+	height: 100px;
+	
+}
+.carousel-inner {
+	padding: 0 20%;
+}
+
+/*************************Get in touch******************************/
+.contact-me {
+	background-color: #142850;
+	padding: 50px 15% 0 15%;
+	color: white;
+}
+
+.contact-me h2 {
+	font-weight: bold;
+}
+.fab {
+	font-size: 2rem;
+	padding-top: 0;
+}
+
 
 .navigation {
-	background-color: #1b262c!important;
+	background-color: #142850!important;
+	padding: 30px 20% 0 20%;
 }
-
 .brand {
 	text-align: right;
-	background-color: #1b262c!important;
-	color:aliceblue;
+	background-color: #142850;
+	color: aliceblue;
 	padding: 20px;
 }
 
-hr {
-	border: dotted 10px;
-	border-bottom: none;
-	margin: auto 35% 50px 35%;
-	border-color: #e5dfdf;
-	
-	
-}
 
-table{
-	margin: 50px auto;
-	border-collapse: separate;
-	
-}
-
-.rightColumn {
-	text-align: left;
-}
-
-.leftColumn {
-	text-align: right;
-	font-weight: bold;
-}
-
-.clientLogos {
-	width: 250px;
-	margin: auto 20px 20px 20px;
+@media screen and (max-width: 990px) {
+	.personName {
+		text-align: center;
+	}
+	.pic {
+		text-align: center;
+	}
 }
